[gd_scene load_steps=12 format=3 uid="uid://cjn7650dhkivr"]

[ext_resource type="Script" path="res://goal/hazards/bullet/bullet.gd" id="1_qyles"]
[ext_resource type="PackedScene" uid="uid://bw8338ilrtcwc" path="res://components/trail/trail.tscn" id="2_dwsrf"]
[ext_resource type="Texture2D" uid="uid://dmmadcrn8ay1x" path="res://assets/textures/circle-filled.png" id="3_riqge"]
[ext_resource type="AudioStream" uid="uid://beh8xlwqswov8" path="res://assets/sounds/excited.wav" id="4_pbqa4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_473wm"]
rough = true
bounce = 0.6

[sub_resource type="CircleShape2D" id="CircleShape2D_5wyey"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_60vly"]
radius = 5.0

[sub_resource type="Curve" id="Curve_vrkvn"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_0x2jr"]
curve = SubResource("Curve_vrkvn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l2fo3"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 16.0
emission_ring_radius = 16.0
emission_ring_inner_radius = 16.0
spread = 180.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -10.0
radial_accel_max = -10.0
tangential_accel_min = 10.0
tangential_accel_max = 10.0
scale_min = 0.05
scale_max = 0.1
scale_curve = SubResource("CurveTexture_0x2jr")
color = Color(0, 1, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_svegx"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("4_pbqa4")
stream_0/weight = 1.0

[node name="Bullet" type="RigidBody2D" node_paths=PackedStringArray("shape", "trail", "collision_shape", "owie_collision", "explode_particles", "bump_sound") groups=["owies"]]
collision_layer = 16
mass = 20.0
physics_material_override = SubResource("PhysicsMaterial_473wm")
gravity_scale = 0.0
max_contacts_reported = 4
contact_monitor = true
constant_torque = -250.0
script = ExtResource("1_qyles")
shape = NodePath("Shape")
trail = NodePath("Trail")
collision_shape = NodePath("CollisionShape2D")
owie_collision = NodePath("Owie/CollisionShape2D")
explode_particles = NodePath("ExplodeParticles")
bump_sound = NodePath("Bump")

[node name="Trail" parent="." instance=ExtResource("2_dwsrf")]
modulate = Color(1, 0, 0, 1)
width = 4.0

[node name="Shape" type="Polygon2D" parent="."]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(-6, 0, -2, -2, 0, -6, 2, -2, 6, 0, 2, 2, 0, 6, -2, 2)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-32, -32, 64, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5wyey")

[node name="Owie" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Owie"]
shape = SubResource("CircleShape2D_60vly")
disabled = true

[node name="ExplodeParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_l2fo3")
texture = ExtResource("3_riqge")
one_shot = true
explosiveness = 1.0

[node name="Bump" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_svegx")
volume_db = -10.0
pitch_scale = 0.75
max_polyphony = 5
bus = &"sfx"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="ExplodeParticles" to="." method="_on_explode_particles_finished"]
